# videogpt.rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  saver.rs  supdata.rs  video_gpt.rs
