[package]
name = "yt-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
dotenv = "0.15.0"
anthropic-ai-sdk = "0.2.25"
uuid = { version = "1.17.0", features = ["v4"] }
